@@ -3,14 +3,18 @@ package io.nagurea.smsupsdk.common.http;
 import lombok.AccessLevel;
 import lombok.NoArgsConstructor;
 
+import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
-import java.nio.charset.StandardCharsets;
 
 @NoArgsConstructor(access = AccessLevel.PRIVATE)
 public class SMSUpURLEncoder {
 
     public static String encode(String text){
-        return URLEncoder.encode(text, StandardCharsets.UTF_8);
+        try {
+            return URLEncoder.encode(text, "UTF-8");
+        } catch (UnsupportedEncodingException e) {
+            throw new IllegalArgumentException("UTF-8 encoding failed");
+        }
     }
 
 }
